Blender crash #47972

Closed
opened 2016-03-27 23:25:13 +02:00 by Erick Tukuniata · 9 comments

System Information
Operating system and graphics card
win 550ti gtx

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) hash 9ad4cb
Worked: (optional)

Short description of error
Blender crashes when trying to select the second layer that has an object

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Get the blend file and select the layer that has an object. Blender will crash

Background info: This scene a was working in January, i have put it to rest and today was trying to revisit, i don't even remember the object that is in that layer but have deleted some more elements in that other layers.
phoenix_bug.blend

**System Information** Operating system and graphics card win 550ti gtx **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) hash 9ad4cb Worked: (optional) **Short description of error** Blender crashes when trying to select the second layer that has an object **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Get the blend file and select the layer that has an object. Blender will crash Background info: This scene a was working in January, i have put it to rest and today was trying to revisit, i don't even remember the object that is in that layer but have deleted some more elements in that other layers. [phoenix_bug.blend](https://archive.blender.org/developer/F298560/phoenix_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Cant verify on Blender 2.77.

Opensuse Tumblweed x86_64
CPU Intel #4200 4 GB
GPU Intel GN 965
xf86-video-intel 2.99.917-6.1

Some information missing:
Blender version
Windows version
Driver version

Cant verify on Blender 2.77. Opensuse Tumblweed x86_64 CPU Intel #4200 4 GB GPU Intel GN 965 xf86-video-intel 2.99.917-6.1 Some information missing: Blender version Windows version Driver version

Sorry even the hash was wrong:
so win 7 550ti gtx and win 8 AMD Radeon R7 240
Broken version Blender 2.77 hash 9adf4cb

Can we have some kind signature in here so we don't have to put windows something ...

Sorry even the hash was wrong: so win 7 550ti gtx and win 8 AMD Radeon R7 240 Broken version Blender 2.77 hash 9adf4cb Can we have some kind signature in here so we don't have to put windows something ...

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the crash here with latest master, particle mess again, investigating further…

Can confirm the crash here with latest master, particle mess again, investigating further…
Bastien Montagne self-assigned this 2016-03-28 15:30:43 +02:00

This issue was referenced by d336bb0765

This issue was referenced by d336bb0765e8175e93e4f9d2c024e258a8c992e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47972
No description provided.