Fix T47972: Blender crash showing particle system.

Do same as with faces - if no orcodata is available, fill orco with current location...